# iceberg-diff

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
src/: bucket.rs  catalog.rs  compare.rs  error.rs  lib.rs  main.rs  scenarios.rs  schema.rs  shortcut.rs
tests/: scenarios_integration.rs  tpch_integration.rs
tests/tpch/: docker-compose.yml  pg2iceberg-a.yaml  pg2iceberg-b.yaml  run.sh  schema.sql
