[package]
name = "iceberg-diff"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast parallel diff between two Iceberg snapshots, using Arrow + DataFusion"

[[bin]]
name = "iceberg-diff"
path = "src/main.rs"

[lib]
name = "iceberg_diff"
path = "src/lib.rs"

[dependencies]
iceberg = "0.5"
iceberg-catalog-rest = "0.5"
iceberg-datafusion = "0.5"

datafusion = "47"
arrow = "55"
arrow-array = "55"
arrow-schema = "55"
arrow-row = "55"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

xxhash-rust = { version = "0.8", features = ["xxh3"] }

clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "1"
serde_json = "1"

[dev-dependencies]
anyhow = "1"
