[package]
name = "iceberg-diff"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast parallel diff between two Iceberg snapshots, using Arrow + DataFusion"

[[bin]]
name = "iceberg-diff"
path = "src/main.rs"

[lib]
name = "iceberg_diff"
path = "src/lib.rs"

[dependencies]
iceberg = { git = "https://github.com/apache/iceberg-rust", tag = "v0.5.1" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", tag = "v0.5.1" }
iceberg-datafusion = { git = "https://github.com/apache/iceberg-rust", tag = "v0.5.1" }

datafusion = "47"
arrow = "55"
arrow-array = "55"
arrow-schema = "55"
arrow-row = "55"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

xxhash-rust = { version = "0.8", features = ["xxh3"] }

clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parquet = { version = "55", features = ["arrow", "async"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[[bin]]
name = "gen_fixture"
path = "src/bin/gen_fixture.rs"

[dev-dependencies]
anyhow = "1"
